dodao username za sign i login formu

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <option value="administrator_restorana">Administrator restorana</option>
     <option value="dostavljac">Dostavljac</option>
   </select>
-  <label for="email">Email</label>
+  <label for="email">Email ili Username</label>
   <input type="text" name="email"  />
   <div class="email error"></div>
   <label for="password">Password</label>
