--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
   <input type="text" name="prezime" required />
   <label for="adresa">Adresa</label>
   <input type="text" name="adresa" required />
-  <label for="email">Email</label>
+  <label for="email">Email ili Username</label>
   <input type="text" name="email" required />
   <div class="email error"></div>
   <label for="password">Password</label>
